cmake_minimum_required(VERSION 3.13)
project(redis)

set(CMAKE_CXX_STANDARD 14)

include_directories(deps/linenoise)
include_directories(deps/lua/etc)
include_directories(deps/lua/src)
include_directories(src)

add_executable(redis
    src/adlist.c
    src/quicklist.c
    src/debug.c
    src/dict.c
    src/server.c
    src/sds.c
    src/zmalloc.c
    src/lzf_c.c
    src/lzf_d.c
    src/pqsort.c
    src/zipmap.c
    src/sha1.c
    src/ziplist.c
    src/release.c
    src/networking.c
    src/util.c
    src/object.c
    src/db.c
    src/t_string.c
    src/t_list.c
    src/t_set.c
    src/t_zset.c
    src/t_hash.c
    src/multi.c
    src/sort.c
    src/intset.c
    src/crc16.c
    src/endianconv.c
    src/slowlog.c
    src/scripting.c
    src/rand.c
    src/crc64.c
    src/bitops.c
    src/notify.c
    src/hyperloglog.c
    src/latency.c
    src/sparkline.c
    src/geo.c
    src/evict.c
    src/expire.c
    src/geohash.c
    src/geohash_helper.c
    src/defrag.c
    src/siphash.c
    src/rax.c
    src/t_stream.c
    src/listpack.c
    src/lolwut.c
    src/lolwut5.c
    deps/lua/src/fpconv.c
    deps/lua/src/lapi.c
    deps/lua/src/lauxlib.c
    deps/lua/src/lbaselib.c
    deps/lua/src/lcode.c
    deps/lua/src/ldblib.c
    deps/lua/src/ldebug.c
    deps/lua/src/ldo.c
    deps/lua/src/ldump.c
    deps/lua/src/lfunc.c
    deps/lua/src/lgc.c
    deps/lua/src/linit.c
    deps/lua/src/liolib.c
    deps/lua/src/llex.c
    deps/lua/src/lmathlib.c
    deps/lua/src/lmem.c
    deps/lua/src/loadlib.c
    deps/lua/src/lobject.c
    deps/lua/src/lopcodes.c
    deps/lua/src/loslib.c
    deps/lua/src/lparser.c
    deps/lua/src/lstate.c
    deps/lua/src/lstring.c
    deps/lua/src/lstrlib.c
    deps/lua/src/ltable.c
    deps/lua/src/ltablib.c
    deps/lua/src/ltm.c
    deps/lua/src/lua.c
    deps/lua/src/lua_bit.c
    deps/lua/src/lua_cjson.c
    deps/lua/src/lua_cmsgpack.c
    deps/lua/src/lua_struct.c
    deps/lua/src/luac.c
    deps/lua/src/lundump.c
    deps/lua/src/lvm.c
    deps/lua/src/lzio.c
    deps/lua/src/print.c
    deps/lua/src/strbuf.c
    src/wrapper.c
)
